--- a/GrupoPV_ProjectFinal/src/main/resources/templates/layout/headeremployees.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/layout/headeremployees.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 	<body>
-		<header id="header row" th:fragment="header">
+		<header id="header row" th:fragment="headeremployees">
 			<div class="bg-darkblue py-1 text-white">
 				<div class="pl-3 ml-2 d-flex bd-highlight">
 					<div class="p-2 bd-highlight"><img class="img-fluid" alt="" th:src="@{/img/logo.png}"></div>
 					<div class="p-2 bd-highlight"><h3>Solivex - Facturation system</h3></div>
-					<div class="ml-auto p-2 bd-highlight d-flex align-items-center">Argentina, 21 de Junio de 2021&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;<span th:text="${#authentication.getPrincipal().getUsername()}"></span>&nbsp;--&nbsp;<i class="far fa-user"></i>&nbsp;&nbsp;&nbsp;&nbsp; <form th:action="@{/logout}" method="post"><button type="submit"><i class="fas fa-power-off"></i></button></form> </div>
+					<div class="ml-auto p-2 bd-highlight d-flex align-items-center">Argentina, 21 de Junio de 2021 &nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;<span th:text="${#authentication.getPrincipal().getUsername()}"></span>&nbsp;--&nbsp;<i class="far fa-user"></i>&nbsp;&nbsp;&nbsp;&nbsp; <form th:action="@{/logout}" method="post"><button type="submit"><i class="fas fa-power-off"></i></button></form> </div>
 				</div>
 			</div>
 			<nav class="navbar navbar-expand-lg navbar-dark bg-darkcyan">
@@ -19,7 +19,7 @@
 						    <li class="nav-item">
 						       <a class="nav-link active text-white hoverlink" aria-current="page"><i class="fas fa-home"></i>&nbsp;Inicio</a>
 						    </li>
-						   <!--   <li class="nav-item dropdown">
+						 <!--     <li class="nav-item dropdown">
 							    <a class="nav-link dropdown-toggle text-white hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							       <i class="fas fa-users"></i>&nbsp;Users
 							    </a>
@@ -27,7 +27,7 @@
 									<a class="dropdown-item text-white hoverlink" >New user</a>
 									<a class="dropdown-item text-white hoverlink">User list</a>
 								</div>
-						    </li>	-->
+						    </li>	
 						    <li class="nav-item dropdown ">
 							    <a class="nav-link dropdown-toggle text-white hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							       <i class="fas fa-user-tie"></i>&nbsp;Employees
@@ -45,7 +45,7 @@
 									<a class="dropdown-item text-white hoverlink" th:href="@{/office/new}">New office</a>
 									<a class="dropdown-item text-white hoverlink" th:href="@{/office/list}">List of offices</a>
 								</div>
-						    </li>
+						    </li>-->
 						    <li class="nav-item dropdown">
 							    <a class="nav-link dropdown-toggle text-white hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							       <i class="fas fa-universal-access"></i>&nbsp;Customers
