--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevaoficina.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevaoficina.html
@@ -26,7 +26,7 @@
 					<div class="p-2">
 					  <div class="form-group">
 					  
-					  		<!-- CAMPOS DEL FORMULARIO  th:unless=${office.officeCode}-->
+					  		<!-- CAMPOS DEL FORMULARIO -->
 						  	<div class="p-3">
 						  		<div class="form-group">
 								    <label for="officeCode">Code</label>
