--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevodetalleorden.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevodetalleorden.html
@@ -9,17 +9,24 @@
 	<link rel="stylesheet" th:href="@{/webjars/fortawesome__fontawesome-free/5.15.3/css/all.css}">
 	</head>
 	<body>
-	
+		
+		<!-- HEADER -->
 		<header th:insert="layout/header :: header"></header>
 		
 		<div class="container mb-5">
 			<div class="row">
+			
+				<!-- TITULO -->
 				<div class="col-7 px-auto mx-auto text-center mt-3 mb-4 py-2 border-bottom">
 					<h2><i class="fas fa-clipboard-list fa-lg"></i>&nbsp;Order detail registration</h2>
 				</div>
+				
+				<!-- FORMULARIO DE REGISTRO -->
 				<form class="bg-white col-sm-7 p-auto m-auto border" th:action="@{/orderdetail/save}" th:method="post" th:object="${orderDetail}">
 					<div class="p-2">
 					  <div class="form-group">
+					  
+					  		<!-- CAMPOS DEL FORMULARIO -->
 						  	<div class="p-3">
 						  		<div class="form-group">
 								    <label for="ordernumber">Order number</label>
@@ -27,7 +34,8 @@
 									  <option th:each="d:${orders}" th:value="${d.orderNumber}">
 									  	 <span th:text="${d.orderNumber}"></span>
 									  </option>
-									</select>								    
+									</select>
+									<div class="alert alert-danger col-sm-12 mt-1" role="alert" th:if="${#fields.hasErrors('id.orderNumber')}" th:errors="*{id.orderNumber}"></div>		    
 							  	</div>
 						  		<div class="form-group">
 								    <label for="productcode">Product code</label>
@@ -35,20 +43,26 @@
 									  <option th:each="p: ${products}" th:value="${p.productCode}">
 									  	<span th:text="${p.productCode}"></span>
 									  </option>
-									</select>								    
+									</select>
+									<div class="alert alert-danger col-sm-12 mt-1" role="alert" th:if="${#fields.hasErrors('id.productCode')}" th:errors="*{id.productCode}"></div>								    
 							  	</div>
 						  		<div class="form-group">
 								    <label for="quantityOrdered">Quantity ordered</label>
 								    <input th:field="*{quantityOrdered}" type="number" class="form-control" id="quantityOrdered" placeholder="Enter the quantity ordered">
+								    <div class="alert alert-danger col-sm-12 mt-1" role="alert" th:if="${#fields.hasErrors('quantityOrdered')}" th:errors="*{quantityOrdered}"></div>
 						  		</div>
 							  	<div class="form-group">
 								    <label for="priceEach">Prince Each</label>
 								    <input th:field="*{priceEach}" type="number" class="form-control" id="priceEach" placeholder="Enter the price of each order">
+						  			<div class="alert alert-danger col-sm-12 mt-1" role="alert" th:if="${#fields.hasErrors('priceEach')}" th:errors="*{priceEach}"></div>
 						  		</div>
 							  	<div class="form-group">
 								    <label for="orderLineNumber">Order line number</label>
 								    <input  th:field="*{orderLineNumber}" type="number" class="form-control" id="orderLineNumber" placeholder="Enter order line number">
+								    <div class="alert alert-danger col-sm-12 mt-1" role="alert" th:if="${#fields.hasErrors('orderLineNumber')}" th:errors="*{orderLineNumber}"></div>
 						  		</div>
+						  		
+						  		<!-- BOTONES DE GUARDAR Y CANCELAR -->
 							  	<div class="mt-4">
 							  		<button type="submit" th:href="@{/orderdetail/save}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Save order detail</button>
 							  		<a th:href="@{/orderdetail/list}" class="btn bg-secondary btn-lg btn-block text-white"><i class="fas fa-ban"></i>&nbsp;Cancel</a>
@@ -60,6 +74,8 @@
 			</div>
 		</div>
 		<br><br>
+		
+		<!-- FOOTER -->
 		<footer class="fixed-bottom" th:insert="layout/footer :: footer"></footer>
 		
 		<script type="text/javascript" th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
